--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,3 +49,37 @@ input.search-bar {
   font-family: inherit;
   font-size: 105%;
 }
+
+button:hover {
+  background: #7c7c7c2b;
+}
+
+h1.temp {
+  margin: 0;
+  margin-bottom: 0.4em;
+}
+
+.description {
+  text-transform: capitalize;
+  margin-left: 8px;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+}
+
+.weather.loading {
+  visibility: hidden;
+  max-height: 20px;
+  position: relative;
+}
+
+.weather.loading:after {
+  visibility: visible;
+  content: 'Loading....';
+  color: white;
+  position: absolute;
+  top: 0;
+  left: 20px;
+}
